# nlp-doc-indexing

./: README.md  pyproject.toml
data/evaluation/: compliance_questions.json
docs/: SYSTEM_DESIGN.md
scripts/: demo.py  evaluate.py
src/aidoc/: models.py  pipeline.py
src/aidoc/evaluation/: evaluator.py
src/aidoc/nlp/: query_understanding.py
src/aidoc/rag/: answer_builder.py
src/aidoc/reranking/: __init__.py  query_reranker.py
tests/: test_pipeline.py
