[project]
name = "nlp-doc-indexing"
version = "0.1.0"
description = "Foundation model and NLP document indexing engine with chunking, enrichment, hybrid retrieval, RAG citations, and knowledge graph extraction."
requires-python = ">=3.9"
authors = [
  { name = "Srimathi Ravisankar" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
